[build-dependencies]
bindgen = "0.71.1"
cbindgen = "0.29.0"

[dependencies]
chrono = "0.4.41"
crossbeam = "0.8.4"
ctrlc = "3.4.7"
libc = "1.0.0-alpha.1"
lockfree-object-pool = "0.1.6"
num = "0.4.3"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
rustfft = "6.4.0"
serde_yaml = "0.9.34+deprecated"
binrw = "0.15.0"


[dependencies.serde]
features = ["derive"]
version = "1.0.219"


[dependencies.clap]
features = ["derive"]
version = "4.5.45"


[lib]
crate-type = [
    "staticlib",
    #"cdylib",
    "rlib",
]
name = "syncdaq"

[package]
edition = "2024"
name = "syncdaq"
version = "0.1.0"

[profile.release]
opt-level = 3
